Fixed store link in Info; updated creating a new user now that .save() is promise based; pushing patch to fix dash issue with Deep Upgrades; updated how challenge card renders objectives to better fit on mobile without overflow

--- a/client/src/components/ChallengeCard/ChallengeCard.css
+++ b/client/src/components/ChallengeCard/ChallengeCard.css
@@ -36,6 +36,7 @@
     width: 1.4rem;
     position: relative;
     bottom: 0.3rem;
+    margin-left: 0.8rem;
 }
 
 .ChallengeObjectives-Task {
@@ -55,6 +56,7 @@
     flex-wrap: nowrap;
     text-align: center;
     align-items: baseline;
+    margin-right: 0.8rem;
 }
 
 .ObjectiveOptions {
@@ -91,6 +93,7 @@
 @media (max-width: 380px) {
     .ObjectiveOptions {
         max-width: 3.2rem;
+        max-height: 2rem;
         transition: 0.5s;
     }
 
